tests/invalid_options_file/nonexistent_file.options_file
# Include a nonexistent file.
include /nonexistent.xyzzy
